bhushan: ui changes for demo

--- a/gold-admin-frontend/src/app/views/pages/auth/auth.component.html
+++ b/gold-admin-frontend/src/app/views/pages/auth/auth.component.html
@@ -62,7 +62,7 @@
 		</div>
 		<div class="col-md-5 col-12">
 			<div class="login-card">
-				<div class="logo" style="padding: 25px 60px 0;">
+				<div class="logo" style="padding: 45px;">
 					<img src="../../../../assets/media/logos/header-logo.png" alt="">
 					<router-outlet></router-outlet>
 				</div>
