--- a/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-list/partner-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-list/partner-list.component.scss
@@ -10,5 +10,8 @@
     }
     .mat-column-commission{
         flex: 0 0 15% !important;
+        .mat-cell {
+            justify-content: center;
+        }
     }
 }
