--- a/gold-admin-frontend/src/app/views/partials/components/modal/modal-header/modal-header.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/modal/modal-header/modal-header.component.html
@@ -1,6 +1,6 @@
-<div class="kt-portlet__head kt-portlet__head__custom">
+<div class="kt-portlet__head kt-portlet__head__custom" style="padding: 0 15px 0;">
     <div class="kt-portlet__head-label">
-        <h3 class="kt-portlet__head-title text-color">{{ title | titlecase }}</h3>
+        <h3 class="kt-portlet__head-title text-color" style="font-weight: 600 !important;">{{ title | titlecase }}</h3>
     </div>
     <div class="align-self-center">
         <img src="../../../../../../assets/media/icons/cancel.svg" alt="" class="kt-pointer" (click)="closeModal()">
