--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -22,7 +22,7 @@
         </div>
         <div class="col-2 text-right">
             <kt-button *ngIf="rightButton" [value]='value2' [type]='type2' (click)="action($event)"></kt-button>
-            <kt-filter *ngIf="showfilter"></kt-filter>
+            <!-- <kt-filter *ngIf="showfilter"></kt-filter> -->
         </div>
     </div>
 </div>
