--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.scss
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.scss
@@ -3,6 +3,9 @@
 
 		// override default version style
 		.kt-header__topbar {
+
+			margin-top: 7px !important;
+
 			> :last-child:not([role="tooltip"]) {
 				.kt-header__topbar-item {
 					margin-right: 0 !important;
