--- a/gold-admin-frontend/src/app/views/pages/auth/auth.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/auth/auth.component.scss
@@ -123,9 +123,9 @@ kt-auth,
 	vertical-align: middle;
 	border-radius : 8px;
 	padding       : 10px;
-	font-weight   : bold;
+	font-weight   : 500;
 	font-size     : 15px;
-	color         : #f5d39f;
+	color         : #835f15;
 }
 
 .btn-login:hover {
@@ -140,7 +140,7 @@ kt-auth,
 	vertical-align: middle;
 	border-radius : 8px;
 	padding       : 10px;
-	font-weight   : bold;
+	font-weight   : 500;
 	font-size     : 15px;
 	color         : #c6c6c6;
 }
@@ -173,5 +173,5 @@ input[type="number"]:focus.login-form-input {
 }
 
 .footer {
-	padding: 50px 0 20px
+	padding: 0 0 20px;
 }
