--- a/gold-admin-frontend/src/app/views/pages/auth/sign-in-with-otp/sign-in-with-otp.component.html
+++ b/gold-admin-frontend/src/app/views/pages/auth/sign-in-with-otp/sign-in-with-otp.component.html
@@ -34,6 +34,6 @@
 <div class="row justify-content-center">
     <div class="col-12 kt-padding-t-5 text-center">
         <span class="text-gray forgot-sub-title ">Didn't get OTP?</span>
-        <span class="text-yellowish kt-pointer" (click)="reSend()">Resend</span>
+        <span class="text-yellowish kt-pointer" (click)="reSend()">&nbsp;Resend</span>
     </div>
 </div>
