--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -213,7 +213,7 @@ input[type="number"] {
 
 /* When the checkbox is checked, add a background */
 .custom-checkbox input:checked ~ .checkmark {
-	background-color: #969696;
+	background-color: #454d67;
 }
 
 .custom-checkbox input:disabled ~ .checkmark {
