--- a/gold-admin-frontend/src/app/views/theme/aside/aside-left.component.html
+++ b/gold-admin-frontend/src/app/views/theme/aside/aside-left.component.html
@@ -9,7 +9,7 @@
 	<div class="kt-aside-menu-wrapper kt-grid__item kt-grid__item--fluid" id="kt_aside_menu_wrapper"
 		[ngStyle]="{'background':'#454D67'}">
 		<div #asideMenu ktMenu [options]="menuOptions" [perfectScrollbar]="{wheelPropagation: false}"
-			[ngStyle]="{'max-height': '100vh', 'position': 'relative','background':'#454D67','padding-bottom':'120px'}"
+			[ngStyle]="{'max-height': '90vh', 'position': 'relative','background':'#454D67','padding-bottom':'120px'}"
 			id="kt_aside_menu" class="kt-aside-menu" [ngClass]="htmlClassService.getClasses('aside_menu', true)">
 			<ul class="kt-menu__nav" [ngClass]="htmlClassService.getClasses('aside_menu_nav', true)">
 				<ng-container [ngTemplateOutlet]="menuListTemplate"></ng-container>
@@ -101,7 +101,8 @@
 	</i>
 
 	<!-- menu item title text -->
-	<span class="kt-menu__link-text" [translate]="item.translate" (click)="item.title == 'Log Out' ? logout() : ''">{{item.title}}</span>
+	<span class="kt-menu__link-text" [translate]="item.translate"
+		(click)="item.title == 'Log Out' ? logout() : ''">{{item.title}}</span>
 	<!-- menu item with badge -->
 	<span *ngIf="item.badge" class="kt-menu__link-badge">
 		<span class="kt-badge" [ngClass]="item.badge.type">{{item.badge.value}}</span>
