bhushan: border top margin removed from kt-footer

--- a/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-list/branch-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-list/branch-list.component.html
@@ -2,14 +2,12 @@
 <kt-portlet>
     <!-- PORTLET LOADING | Binded to TABLE Datasource -->
     <!-- See prop => '~/core/_crud/models/data-sources/_base.datasource.ts' (loading$) -->
-    <kt-portlet-header [title]="'Branch List'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
+    <!-- <kt-portlet-header [title]="'Branch List'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
 
         <ng-container ktPortletTools>
 
-            <!-- Buttons (Material Angular) | See off.documenations 'https://material.angular.io/components/button/overview' -->
-            <!-- mat-raised-button | Rectangular contained button w/ elevation  -->
         </ng-container>
-    </kt-portlet-header>
+    </kt-portlet-header> -->
     <!-- end::Header -->
 
     <kt-portlet-body>
