page title service

--- a/gold-admin-frontend/src/app/views/theme/header/header.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/header.component.html
@@ -14,7 +14,7 @@
 	<kt-topbar></kt-topbar> -->
 	<!-- end:: Header Topbar -->
 	<div class="row w-100">
-		<div class="col-12">
+		<div class="col-12  align-self-center">
 			<kt-topbar></kt-topbar>
 		</div>
 	</div>
