--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -2,7 +2,11 @@
 <div class="kt-header__topbar kt-margin-t-10 ">
     <div class="row justify-content-center">
         <div class="col-4">
-            <!-- breasd -->
+            <div class="kt-subheader__main" [hidden]="subheaderService.disabled$ | async" id="kt_subheader">
+                <label *ngIf="title" class="kt-subheader__title">{{title}}</label>
+                <span class=""></span>
+                <label *ngIf="totalRecords" class="kt-subheader__desc">{{totalRecords}}</label>
+            </div>
         </div>
         <div class="col-6">
             <kt-search *ngIf="showInput"></kt-search>
