--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
@@ -1,7 +1,7 @@
 <kt-toastr #toastr></kt-toastr>
 
 <kt-portlet>
-    <kt-portlet-body>
+    <kt-portlet-body style="min-height: 79vh;">
         <kt-uplod-data-image [images]="images"></kt-uplod-data-image>
         <div class="row kt-margin-t-10">
             <div class="col-3 font-weight-bold text-color d-flex align-items-center" placeholder="">Upload Gold Rate
