--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
@@ -1,7 +1,7 @@
 <kt-toastr #toastr></kt-toastr>
 
 <kt-portlet>
-    <kt-portlet-body>
+    <kt-portlet-body style="min-height: 79vh;">
         <kt-uplod-data-image [images]="images"></kt-uplod-data-image>
     </kt-portlet-body>
     <kt-portlet-footer>
