--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.scss
@@ -7,4 +7,11 @@
         background-color: #454D67 !important;
         color           : rgb(193, 193, 193) !important;
     }
+    .top-0{
+        top:0px;
+    }
+    .pos{
+        margin-left: auto;
+        width: 23%;
+    }
 }
