--- a/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
+++ b/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
@@ -20,7 +20,7 @@
 	</div>
 </div>
 
-<div style="font-weight: 600;color: #ffde9c; background-color: #454D67; padding-top: 15px;" class="text-center">
+<div class="gold-rate text-center">
 	<span class="kt-aside__gold-rate">Gold rate: </span>{{goldRate}} /gm
 </div>
 <!-- end:: Brand -->
